--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,10 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
+
 @import "~leaflet/dist/leaflet.css";
 
 .leaflet-tooltip {
@@ -57,6 +61,8 @@
   &-content {
     display: flex;
     align-items: flex-start;
+    font-family: 'Poppins', sans-serif;
+
     span {
       font-size: 16px;
       line-height: 110%;
