--- a/src/global.scss
+++ b/src/global.scss
@@ -45,6 +45,12 @@
   &-top::before {
     border-top-color: #0e8bde;
   }
+  &-left::before {
+    border-left-color: #0e8bde;
+  }
+  &-right::before {
+    border-right-color: #0e8bde;
+  }
   &-bottom::before {
     border-bottom-color: #0e8bde;
   }
@@ -54,7 +60,7 @@
     align-items: center;
   }
   &-title {
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 500;
   }
   &-content {
@@ -62,14 +68,14 @@
     font-family: "Poppins", sans-serif;
 
     span {
-      line-height: 16px;
-      font-size: 16px;
+      line-height: 14px;
+      font-size: 14px;
       font-weight: 500;
     }
     small {
       line-height: 11px;
       font-weight: 500;
-      font-size: 10px;
+      font-size: 8px;
     }
   }
 }
