--- a/src/global.scss
+++ b/src/global.scss
@@ -27,20 +27,20 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 
+// Put in global css
+// Leaflet styles
 @import "~leaflet/dist/leaflet.css";
 
+// Overwriting default leaflet popup styles
 .leaflet-tooltip {
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 5px;
-  position: absolute;
   background-color: #0e8bde;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   color: rgb(255, 255, 255);
   white-space: nowrap;
-  -webkit-user-select: none;
-  user-select: none;
-  pointer-events: none;
   box-shadow: 0 1px 3px rgb(0 0 0 / 40%);
   &-top::before {
     border-top-color: #0e8bde;
@@ -60,22 +60,47 @@
     align-items: center;
   }
   &-title {
-    font-size: 14px;
-    font-weight: 500;
+    line-height: 1;
+    padding-bottom: 4px;
+    font-size: 15px;
+    font-weight: 400;
   }
   &-content {
+    line-height: 1.25;
     display: flex;
-    font-family: "Poppins", sans-serif;
+    align-items: flex-start;
 
     span {
-      line-height: 14px;
-      font-size: 14px;
+      line-height: 1;
+      font-size: 15px;
       font-weight: 500;
     }
     small {
-      line-height: 11px;
+      line-height: 1;
+      font-size: 10px;
       font-weight: 500;
-      font-size: 8px;
+    }
+  }
+}
+@media only screen and (max-width: 450px) {
+  .leaflet-tooltip {
+    padding: 3px;
+    &-title {
+      font-size: 12px;
+      padding-bottom: 2px;
+      font-weight: 400;
+    }
+    &-content {
+      span {
+        line-height: 1;
+        font-size: 12px;
+        font-weight: 500;
+      }
+      small {
+        line-height: 1;
+        font-size: 8px;
+        font-weight: 500;
+      }
     }
   }
 }
